# 3D-PINN-for-PDEs

./: .gitignore  CLEAN_SETUP.md  FINAL_SETUP.md  HELMHOLTZ_BEST_CONFIG.md  Hansheng_Zhu_Introduction_to_JAX.ipynb  LAPLACIAN_FIX.md  README.md  SUCCESS_RESULTS.md  pyproject.toml  requirements.txt
configs/: helmholtz_cube_best.yaml  helmholtz_cube_easy.yaml  poisson_3d_simple.yaml
docs/tutorial_notebooks/JAX/tutorial2/: Introduction_to_JAX.ipynb
notebooks/: 01_start_server.ipynb  02_train_poisson.ipynb
src/pinn3d/: __init__.py  api_server.py  checkpoints.py  config.py  loss.py  model_siren.py  pde.py  poisson_loss.py  poisson_model.py  poisson_pde.py  sampling.py  source.py  train_adam.py  train_lbfgs.py  validate_fd.py
tests/: test_boundary.py  test_laplacian.py  test_residual_smoke.py
